# ddwave

./: BUILD_RECIPE.md  DEBUGGING_PLAN.md  GGWAVE_INTEGRATION_PLAN.md  app.json  package-lock.json  package.json  verify-setup.sh
app/(tabs)/: _layout.tsx  index.tsx  receive.tsx
constants/: theme.ts
modules/expo-ggwave/: README.md  expo-module.config.json  package.json  tsconfig.json
modules/expo-ggwave/android/: CMakeLists.txt  build.gradle
modules/expo-ggwave/android/src/main/cpp/: ggwave-jni.cpp
modules/expo-ggwave/android/src/main/java/expo/modules/ggwave/: AudioManager.kt  ExpoGGWaveModule.kt  GGWaveEngine.kt
modules/expo-ggwave/ios/: AudioManager.swift  ExpoGGWave.podspec  ExpoGGWaveModule.swift  GGWaveEngine.h  GGWaveEngine.mm  ggwave-impl.mm
modules/expo-ggwave/src/: ExpoGGWave.types.ts  index.ts  useGGWave.ts
